tests/bad/lex_error.kel
// Caracter ilegal
fn main() {
  val x = @5
}
